添加删除用户功能

--- a/src/main/resources/templates/editPassword/editPassword.html
+++ b/src/main/resources/templates/editPassword/editPassword.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-		<title>CSIè¯­é³ ææ¯å§</title>
+		<title>修改密码</title>
 
 		<link rel="stylesheet" href="../js/metronic/plugins/bootstrap/css/bootstrap.css">
 		<link rel="stylesheet" href="../login/css/font-awesome.min.css">
@@ -14,13 +14,6 @@
 	</head>
 
 	<body style="height: auto;">
-		
-		
-		
-		
-		
-		
-		<!--<div id="ORG_ADD_DIV_ID" class="card card-info" style="display:none">  -->
 		<div id="POST_ADD_DIV_ID" class="card card-info">
 	        <input id="regUUID" type="hidden" value=""/>
 	        <div class="form-horizontal">
@@ -28,6 +21,7 @@
 			             <div class="form-group" >
 			                 <label for="JI_JOB_NAME" class="col-sm-2 control-label">新的密码：</label>
 			              	  <div class="col-sm-10" >
+								  <input hidden th:value ="${user_id}" id="user_id"/>
 			                 	<input value="" type="password" name="newPassword" id="newPassword" class="form-control"  placeholder="请输入您的新密码" style="width:600px"  >
 			                 </div>
 			            </div>
@@ -57,10 +51,10 @@
 	        </div>
 	    </div>
 		
-		
-		
-		
-		
+<!--		-->
+<!--		-->
+<!--		-->
+<!--		-->
 		<script src="../js/metronic/plugins/jquery/dist/jquery.js"></script>
 		<script src="../js/metronic/plugins/jQuery-Storage-API/jquery.storageapi.js"></script>
 		<script src="../js/metronic/plugins/jquery.form/jquery.form.min.js"></script>
@@ -95,48 +89,34 @@
 				$("#tishi").html("当前密码不能为空");
 				return;
 			}
-			window.parent.location.replace("../loginForm.html");
-/*
-			
+			var user_id = document.getElementById("user_id");
 			$.ajax({
 		        type: "POST",
-		        url: "/hrm/user/editPassword",
+		        url: "/user/editPassword",
 		        async: true,
-		        data:{
-		        	oldPassword:oldPassword.trim(),
-		        	newPassword:newPassword.trim(),
-		       	 },
+		        data:JSON.stringify({
+					oldPassword:oldPassword.trim(),
+					newPassword:newPassword.trim(),
+					user_id:user_id.value
+				}),
 		        dataType: "json",
+				contentType: "application/json;charset=UTF-8",
 		        error: function (XMLHttpRequest, textStatus, errorThrown) {
 		        	alert("消息","出错了，请于管理员联系");
 		        },
 		        success: function (json) {
-
-		        	if(json.message!=""){
+		        	if(json.message!="success"){
 		        		$("#tishi").html(json.message);
 		        	}else{
-		        	
-		        		window.parent.location.replace("/hrm/");
+		        		window.parent.location.replace("../loginForm.html");
 		        		//alert(JSON.stringify(json));
 		        	}
-		        	
 		        }
 		    });
-				*/
 		}
 		
 	
 		</script>
-
-		
-		<!--  
-		<script src="/stmadc/stma/dc/include/js/jcommon.js"></script>
-		
-		<script language="JavaScript" src="/stmadc/jquery/jquery-ui-1.8.20.min.js"></script>
-		<script src="/stmadc/static/comp/bootstrap/dist/js/bootstrap.js"></script>
-		<script src="/stmadc/static/comp/adminlte/js/adminlte.min.js"></script>
-		<script language="JavaScript" src="/stmadc/stma/dc/include/js/jcommon.js"></script>
-	-->
 
 
 </body></html>
