--- a/src/main/resources/templates/notice/notice.html
+++ b/src/main/resources/templates/notice/notice.html
@@ -1,163 +1,249 @@
-
 <!DOCTYPE HTML>
-<html>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>人事管理系统 ——公告管理</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta http-equiv="pragma" content="no-cache" />
-	<meta http-equiv="cache-control" content="no-cache" />
-	<meta http-equiv="expires" content="0" />    
-	<meta http-equiv="keywords" content="keyword1,keyword2,keyword3" />
-	<meta http-equiv="description" content="This is my page" />
-	<link href="../css/css.css" type="text/css" rel="stylesheet" />
-	<link rel="stylesheet" type="text/css" href="../js/ligerUI/skins/Aqua/css/ligerui-dialog.css"/>
-	<link href="../js/ligerUI/skins/ligerui-icons.css" rel="stylesheet" type="text/css" />
-	<script type="text/javascript" src="../js/jquery-1.11.0.js"></script>
+    <title>人事管理系统 ——公告管理</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="pragma" content="no-cache"/>
+    <meta http-equiv="cache-control" content="no-cache"/>
+    <meta http-equiv="expires" content="0"/>
+    <meta http-equiv="keywords" content="keyword1,keyword2,keyword3"/>
+    <meta http-equiv="description" content="This is my page"/>
+    <link href="../css/css.css" type="text/css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" href="../js/ligerUI/skins/Aqua/css/ligerui-dialog.css"/>
+    <link href="../js/ligerUI/skins/ligerui-icons.css" rel="stylesheet" type="text/css"/>
+    <script type="text/javascript" src="../js/jquery-1.11.0.js"></script>
     <script type="text/javascript" src="../js/jquery-migrate-1.2.1.js"></script>
-	<script src="../js/ligerUI/js/core/base.js" type="text/javascript"></script>
-	<script src="../js/ligerUI/js/plugins/ligerDrag.js" type="text/javascript"></script> 
-	<script src="../js/ligerUI/js/plugins/ligerDialog.js" type="text/javascript"></script>
-	<script src="../js/ligerUI/js/plugins/ligerResizable.js" type="text/javascript"></script>
-	<link href="../css/pager.css" type="text/css" rel="stylesheet" />
-	<script type="text/javascript">
-	$(function(){
-		
-			/** 获取上一次选中的部门数据 */
-	 	   var boxs  = $("input[type='checkbox'][id^='box_']");
-			
-	 	  /** 给全选按钮绑定点击事件  */
-	    	$("#checkAll").click(function(){
-	    		// this是checkAll  this.checked是true
-	    		// 所有数据行的选中状态与全选的状态一致
-	    		boxs.attr("checked",this.checked);
-	    	})
-	    	
-	 	  /** 给数据行绑定鼠标覆盖以及鼠标移开事件  */
-	    	$("tr[id^='data_']").hover(function(){
-	    		$(this).css("backgroundColor","#eeccff");
-	    	},function(){
-	    		$(this).css("backgroundColor","#ffffff");
-	    	})
-	    	
-	    	
-	 	   /** 删除公告绑定点击事件 */
-	 	   $("#delete").click(function(){
-	 		   /** 获取到公告选中的复选框  */
-	 		   var checkedBoxs = boxs.filter(":checked");
-	 		   if(checkedBoxs.length < 1){
-	 			   $.ligerDialog.error("请选择一个需要删除的公告！");
-	 		   }else{
-	 			   /** 得到公告选中的所有的需要删除的ids */
-	 			   var ids = checkedBoxs.map(function(){
-	 				   return this.value;
-	 			   })
-	 			   
-	 			   $.ligerDialog.confirm("确认要删除吗?","删除公告",function(r){
-	 				   if(r){
-	 					   // alert("删除："+ids.get());
-	 					   // 发送请求
-	 					  // window.location = "${ctx }/notice/removeNotice?ids=" + ids.get();
-	 				   }
-	 			   });
-	 		   }
-	 	   })
-		
-		/** 给预览绑定点击事件 */
-		$("a[id^='prev_'").click(function(){
-			var noticeId = this.id.replace('prev_','');
-			$.ligerDialog.open({ 
-				title:'预览公告',
-				height: 500, 
-				url: 'previewNotice.html', 
-				width: 750, 
-				showMax: true, 
-				showToggle: true, 
-				showMin: true, 
-				isResize: true, 
-				slide: false 
-				});
-		})
-	 })
-	</script>
+    <script src="../js/ligerUI/js/core/base.js" type="text/javascript"></script>
+    <script src="../js/ligerUI/js/plugins/ligerDrag.js" type="text/javascript"></script>
+    <script src="../js/ligerUI/js/plugins/ligerDialog.js" type="text/javascript"></script>
+    <script src="../js/ligerUI/js/plugins/ligerResizable.js" type="text/javascript"></script>
+    <link href="../css/pager.css" type="text/css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css">
+    <script type="text/javascript">
+
+        function searchNotice() {
+            var title = $("#noticeTitle").val();
+            var content = $("#noticeContent").val();
+            var url = '/notice/noticeSearch?title=' + title + "&content=" + content;
+            $.ajax({
+                url: url,
+                type: 'POST',
+                success: function (data) {
+                    $("#tableList").html(data);
+                }
+            })
+        }
+
+        function summit(id){
+            var url = '/notice/showNoticePage?cpage=' + id;
+            $.ajax({
+                url: url,
+                type: 'POST',
+                success: function (data) {
+                    $("#tableList").html(data);
+                    var idName = "#btn"+id;
+                    $(idName).removeClass("btn-light").addClass("btn-primary");
+                }
+            })
+        }
+
+        function preview(id) {
+            $.ligerDialog.open({
+                title: '预览公告',
+                height: 500,
+                url: 'previewNotice.html?id=' + id,
+                width: 750,
+                showMax: true,
+                showToggle: true,
+                showMin: true,
+                isResize: true,
+                slide: false
+            });
+        }
+
+        $(function () {
+
+            /** 获取上一次选中的部门数据 */
+            var boxs = $("input[type='checkbox'][id^='box_']");
+
+            /** 给全选按钮绑定点击事件  */
+            $("#checkAll").click(function () {
+                // this是checkAll  this.checked是true
+                // 所有数据行的选中状态与全选的状态一致
+                boxs.attr("checked", this.checked);
+            })
+
+            /** 给数据行绑定鼠标覆盖以及鼠标移开事件  */
+            $("tr[id^='data_']").hover(function () {
+                $(this).css("backgroundColor", "#eeccff");
+            }, function () {
+                $(this).css("backgroundColor", "#ffffff");
+            })
+
+
+            /** 删除公告绑定点击事件 */
+            $("#delete").click(function () {
+                /** 获取到公告选中的复选框  */
+                var checkedBoxs = boxs.filter(":checked");
+                if (checkedBoxs.length < 1) {
+                    $.ligerDialog.error("请选择一个需要删除的公告！");
+                } else {
+                    /** 得到公告选中的所有的需要删除的ids */
+                    var ids = checkedBoxs.map(function () {
+                        return this.value;
+                    })
+
+                    $.ligerDialog.confirm("确认要删除吗?", "删除公告", function (r) {
+                        if (r) {
+                            $.ajax({
+                                type: "POST",
+                                url: "/notice/removeNotice?ids=" + ids.get(),
+                                async: true,
+                                contentType: "application/json;charset=UTF-8",
+                                error: function (XMLHttpRequest, textStatus, errorThrown) {
+                                    alert("消息", "出错了，请于管理员联系");
+                                },
+                                success: function (json) {
+                                    if (json!== "success") {
+                                        $.ligerDialog.error(json);
+                                    } else {
+                                        var idss = ids.get().toString();
+                                        var idss = idss.split(",");
+                                        for (var i = 0; i < idss.length; i++) {
+                                            $("#data_" + idss[i]).fadeOut("fast");
+                                        }
+                                    }
+                                }
+                            });
+                        }
+                    });
+                }
+            })
+        })
+    </script>
 </head>
 <body>
-	<!-- 导航 -->
-	<table width="100%" border="0" cellpadding="0" cellspacing="0">
-	  <tr><td height="10"></td></tr>
-	  <tr>
-	    <td width="15" height="32"><img src="../images/main_locleft.gif" width="15" height="32"></td>
-		<td class="main_locbg font2"><img src="../images/pointer.gif">&nbsp;&nbsp;&nbsp;当前位置：公告管理 &gt; 公告查询</td>
-		<td width="15" height="32"><img src="../images/main_locright.gif" width="15" height="32"></td>
-	  </tr>
-	</table>
-	
-	<table width="100%" height="90%" border="0" cellpadding="5" cellspacing="0" class="main_tabbor">
-	  <!-- 查询区  -->
-	  <tr valign="top">
-	    <td height="30">
-		  <table width="100%" border="0" cellpadding="0" cellspacing="10" class="main_tab">
-		    <tr>
-			  <td class="fftd">
-			  	
-				    <table width="100%" border="0" cellpadding="0" cellspacing="0">
-					  <tr>
-					    <td class="font3">
-					    	公告名称：<input type="text" name="title">
-					    	公告内容：<input type="text" name="content">
-					    	 <input type="submit" value="搜索"/>
-					    	<input id="delete" type="button" value="删除"/>
-					    </td>
-					  </tr>
-					</table>
-				
-			  </td>
-			</tr>
-		  </table>
-		</td>
-	  </tr>
-	  
-	  <!-- 数据展示区 -->
-	  <tr valign="top">
-	    <td height="20">
-		  <table width="100%" border="1" cellpadding="5" cellspacing="0" style="border:#c2c6cc 1px solid; border-collapse:collapse;">
-		    <tbody><tr class="main_trbg_tit" align="center">
-			  <td><input type="checkbox" name="checkAll" id="checkAll"></td>
-			  <td>公告名称</td>
-			  <td>公告内容</td>
-			  <td>创建时间</td>
-			  <td>公告人</td>
-			  
-			  <td>操作</td>
-			   
-			  <td>预览</td>
-			</tr>
-			
-				<tr id="data_0" align="center" class="main_trbg" style="background-color: rgb(255, 255, 255);">
-					<td><input type="checkbox" id="box_0" value="19"></td>
-					 <td>参加会议通知</td>
-					  <td>今天有技术部有会议</td>
-					  <td>
-					  2019年4月6日
-					  </td>
-					  <td>songyq</td>
-					  
-					 <td align="center" width="40px;"><a href="showUpdateNotice.html">
-							<img title="修改" src="../images/update.gif"></a>
-					  </td>
-					   
-					  <td align="center" width="40px;"><a href="#" id="prev_19">
-							<img title="预览" src="../images/prev.gif"></a>
-					  </td>
-				</tr>
-			
-		  </tbody></table>
-		</td>
-	  </tr>
-	  <!-- 分页标签 -->
-	  <tr valign="top"><td align="center" class="font3">
-	  	 <table width="100%" align="center" style="font-size:13px;" class="digg"><tbody><tr><td style="COLOR: #0061de; MARGIN-RIGHT: 3px; PADDING-TOP: 2px; TEXT-DECORATION: none"><span class="disabled">上一页</span><span class="current">1</span><span class="disabled">下一页</span>&nbsp;跳转到&nbsp;&nbsp;<input style="text-align: center;BORDER-RIGHT: #aaaadd 1px solid; PADDING-RIGHT: 5px; BORDER-TOP: #aaaadd 1px solid; PADDING-LEFT: 5px; PADDING-BOTTOM: 2px; MARGIN: 2px; BORDER-LEFT: #aaaadd 1px solid; COLOR: #000099; PADDING-TOP: 2px; BORDER-BOTTOM: #aaaadd 1px solid; TEXT-DECORATION: none" type="text" size="2" id="pager_jump_page_size">&nbsp;<input type="button" style="text-align: center;BORDER-RIGHT: #dedfde 1px solid; PADDING-RIGHT: 6px; BACKGROUND-POSITION: 50% bottom; BORDER-TOP: #dedfde 1px solid; PADDING-LEFT: 6px; PADDING-BOTTOM: 2px; BORDER-LEFT: #dedfde 1px solid; COLOR: #0061de; MARGIN-RIGHT: 3px; PADDING-TOP: 2px; BORDER-BOTTOM: #dedfde 1px solid; TEXT-DECORATION: none" value="确定" id="pager_jump_btn"></td></tr><tr align="center"><td style="font-size:13px;"></td></tr><tr><td style="COLOR: #0061de; MARGIN-RIGHT: 3px; PADDING-TOP: 2px; TEXT-DECORATION: none">总共<font color="red">1</font>条记录，当前显示1-1条记录。</td></tr></tbody></table>
-	  </td></tr>
-	</table>
-	<div style="height:10px;"></div>
+<!-- 导航 -->
+<table width="100%" border="0" cellpadding="0" cellspacing="0">
+    <tr>
+        <td height="10"></td>
+    </tr>
+    <tr>
+        <td width="15" height="32"><img src="../images/main_locleft.gif" width="15" height="32"></td>
+        <td class="main_locbg font2"><img src="../images/pointer.gif">&nbsp;&nbsp;&nbsp;当前位置：公告管理 &gt; 公告查询</td>
+        <td width="15" height="32"><img src="../images/main_locright.gif" width="15" height="32"></td>
+    </tr>
+</table>
+
+<table width="100%" height="90%" border="0" cellpadding="5" cellspacing="0" class="main_tabbor">
+    <!-- 查询区  -->
+    <tr valign="top">
+        <td height="30">
+            <table width="100%" border="0" cellpadding="0" cellspacing="10" class="main_tab">
+                <tr>
+                    <td class="fftd">
+
+                        <table width="100%" border="0" cellpadding="0" cellspacing="0">
+                            <tr>
+                                <td class="font3">
+                                    公告名称：<input type="text" id="noticeTitle" name="title">
+                                    公告内容：<input type="text" id="noticeContent" name="content">
+                                    <input type="button" onclick="searchNotice()" value="搜索"/>
+                                    <input id="delete" type="button" value="删除"/>
+                                </td>
+                            </tr>
+                        </table>
+
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+</table>
+
+<div class="tableList" id="tableList" th:fragment="pageHtml">
+    <!-- 数据展示区 -->
+    <tr valign="top">
+        <td height="20">
+            <table class="table table-hover" width="100%" border="1" cellpadding="5"
+                   cellspacing="0" style="border:#c2c6cc 1px solid; border-collapse:collapse;">
+                <tbody>
+                <tr class="main_trbg_tit" align="center">
+                    <td><input type="checkbox" name="checkAll" id="checkAll"></td>
+                    <td>公告名称</td>
+                    <td>公告内容</td>
+                    <td>创建时间</td>
+                    <td>公告人</td>
+
+                    <td width="70px;">操作</td>
+
+                    <td width="70px;">预览</td>
+                </tr>
+
+                <tr th:each="notice,state:${page.rows}" th:id="'data_' + ${notice.notice_id}" align="center"
+                    class="main_trbg" style="background-color: rgb(255, 255, 255);">
+                    <td><input type="checkbox" th:id="'box_' + ${notice.notice_id}" th:value="${notice.notice_id}"></td>
+                    <td th:text="${notice.notice_title}"></td>
+                    <td th:text="${notice.notice_content}"></td>
+                    <td th:text="${notice.notice_create_date}"></td>
+                    <td th:text="${notice.notice_user_id}"></td>
+
+                    <td align="center" width="40px;"><a
+                            th:href="'showUpdateNotice.html?notice_id=' + ${notice.notice_id}">
+                        <img title="修改" src="../images/update.gif"></a>
+                    </td>
+
+                    <td align="center" width="40px;"><a
+                                                        id="prev_19">
+                        <img th:onclick="'preview(' + ${notice.notice_id} + ')'" title="预览" src="../images/prev.gif"></a>
+                    </td>
+                </tr>
+
+                </tbody>
+            </table>
+        </td>
+    </tr>
+    <!-- 分页标签 -->
+    <div align="center">
+
+        <!--        首页更改-->
+        <button type="button" class="btn btn-light" th:text="首页"
+                th:onclick="${page.isFirstPage}==true?'': 'summit(1)'"></button>
+
+        <button type="button" class="btn btn-light"
+                th:onclick="${page.isFirstPage}==true?'': 'summit('+${page.current - 1} + ')'"
+                th:text="上一页"
+        ></button>
+
+        <!-- 如果前面页码没有显示完则显示省略号 -->
+        <a th:if="${page.navigateFirstPage > 1}"><strong>...</strong></a>
+
+        <!-- 显示导航页码 -->
+
+        <th:block th:each="i: ${page.navigatepageNums}">
+            <button type="button" class="btn btn-light" th:classappend="${page.current == i} ? 'btn-primary'"
+                    th:onclick="'summit(' + ${i} + ')'" th:text="${i}" th:id="'btn'+${i}"
+            ></button>
+        </th:block>
+
+
+        <!-- 如果后面页码没有显示完则显示省略号 -->
+        <a th:if="${page.navigateLastPage < page.totalPages}"><strong>...</strong></a>
+
+        <!-- 如果是末页，disable下一页和末页-->
+        <button type="button" class="btn btn-light"
+                th:onclick="${page.isLastPage}==true?'': 'summit('+${page.current + 1} + ')'"
+                th:text="下一页"
+        ></button>
+
+        <button type="button" class="btn btn-light"
+                th:onclick="${page.isLastPage}==true?'': 'summit('+${page.totalPages} + ')'"
+                th:text="尾页"
+        ></button>
+    </div>
+
+</div>
+<div style="height:10px;"></div>
 </body>
 </html>
